# rust-clean-architecture

./: .cursorrules  Cargo.toml
domain/src/: lib.rs  todo.rs
driver/: Cargo.toml
driver/src/: lib.rs  todo_driver.rs
driver/src/data/: todos.csv
gateway/: Cargo.toml
gateway/src/: lib.rs  todo_gateway.rs
handler/: Cargo.toml
handler/src/: error.rs  lib.rs  systems.rs  todos.rs
port/: Cargo.toml
port/src/: lib.rs  todo_port.rs
rest/: Cargo.toml
rest/src/: handler.rs  lib.rs  route.rs  state.rs
rest/src/handler/: systems.rs  todos.rs
src/: main.rs
usecase/: Cargo.toml
usecase/src/: get_todos_usecase.rs  lib.rs
