[package]
name = "rust-clean-architecture"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["rest", "handler", "usecase", "domain", "gateway", "driver"]

[workspace.dependencies]
rest = { path = "./rest" }
handler = { path = "./handler" }
usecase = { path = "./usecase" }
domain = { path = "./domain" }
gateway = { path = "./gateway" }
driver = { path = "./driver" }

tokio = { version = "1.48.0", features = ["full"]}
axum = "0.8.8"

[dependencies]
tokio.workspace = true
axum.workspace = true