[package]
name = "rust-clean-architecture"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["rest", "handler", "usecase", "port", "domain", "gateway", "driver"]

[workspace.dependencies]
rest = { path = "./rest" }
handler = { path = "./handler" }
usecase = { path = "./usecase" }
port = { path = "./port" }
domain = { path = "./domain" }
gateway = { path = "./gateway" }
driver = { path = "./driver" }

tokio = { version = "1.48.0", features = ["full"]}
axum = "0.8.8"

[dependencies]
rest.workspace = true

tokio.workspace = true
axum.workspace = true