[package]
name = "rust-clean-architecture"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["rest", "usecase", "port", "domain", "gateway", "driver"]

[workspace.dependencies]
rest = { path = "./rest" }
usecase = { path = "./usecase" }
port = { path = "./port" }
domain = { path = "./domain" }
gateway = { path = "./gateway" }
driver = { path = "./driver" }

tokio = { version = "1.48.0", features = ["full"]}
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

[dependencies]
rest.workspace = true

tokio.workspace = true
axum.workspace = true